@@ -33,6 +33,7 @@ K  8405	MboxFolder.expunge can corrupt mailbox file
 K  8415	Update public API to use generics
 K  8420	Malformed IMAP FETCH response throws the wrong exception
 K  8422	RFC822.SIZE > 2GB isn't handled
+K  8486	Protocol#command method call readResponse after IOException is thrown
 
 
 		  CHANGES IN THE 1.5.6 RELEASE
